--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,9 @@
     "noImplicitReturns": true,
     "skipLibCheck": true
   },
-  "include": ["src"]
+  "paths": {
+    "@/*": ["./src/*"]
+  },
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
